--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Toranjino product</title>
+    <title>محصولات ترنجینو</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 alt="toranjino-logo">
             <h1 id="h1" class="mt-3">لیست محصولات فروشگاه ترنجینو</h1>
         </header>
-        <main id="main" class="d-flex justify-content-center justify-content-sm-start m-auto flex-wrap"></main>
+        <main id="main" class="d-flex justify-content-center flex-wrap"></main>
     </div>
     <footer id="footer" class="d-flex justify-content-center align-items-center">
         <span class="mx-2 text-center">تمامی حقوق مادی و معنوی برای فروشگاه ترنجینو محفوظ می‌باشد. طراحی و پیاده سازی:
