--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
                 alt="toranjino-logo">
             <h1 id="h1" class="mt-3">لیست محصولات فروشگاه ترنجینو</h1>
         </header>
-        <main id="main" class="d-flex justify-content-center flex-wrap"></main>
+        <section id="search" class="container m-auto w-50">
+            <input type="text" id="searchInput" class="form-control"
+                placeholder="نام محصول مورد نظرتان را وارد کنید ...">
+        </section>
+        <main id="main" class="d-flex justify-content-center flex-wrap mt-4"></main>
     </div>
     <footer id="footer" class="d-flex justify-content-center align-items-center">
         <span class="mx-2 text-center">تمامی حقوق مادی و معنوی برای فروشگاه ترنجینو محفوظ می‌باشد. طراحی و پیاده سازی:
